# crazyradio2-firmware

./: CMakeLists.txt  README.md  sign_scheme.cfg
docs/building-and-flashing/: build.md
src/: main.c
